tests/scope/good/sub_sub_scope.catala_en
## Article

```catala
declaration scope A:
  context output x content integer
  context output u content boolean

declaration scope B:
  a1 scope A
  a2 scope A
  context output y content integer

declaration scope C:
  a scope A
  b scope B
  context output z content integer

scope A:
 definition x equals 0
 definition u equals true

scope B:
  definition a2.x under condition a1.u consequence equals 1
  definition y under condition a2.x = 1 consequence equals 1
  definition y under condition a2.x + 1 = 2 consequence equals 1

scope C:
  definition a.x equals 2
  definition b.y equals 3
  definition z equals 2
```



```catala-test-inline
$ catala Typecheck --check-invariants
┌─[WARNING]─
│
│  Unused varible: a does not contribute to computing any of scope C outputs.
│  Did you forget something?
│
├─➤ tests/scope/good/sub_sub_scope.catala_en:14.3-14.4:
│    │
│ 14 │   a scope A
│    │   ‾
└─ Article
┌─[WARNING]─
│
│  Unused varible: b does not contribute to computing any of scope C outputs.
│  Did you forget something?
│
├─➤ tests/scope/good/sub_sub_scope.catala_en:15.3-15.4:
│    │
│ 15 │   b scope B
│    │   ‾
└─ Article
┌─[RESULT]─
│ All invariant checks passed
└─
┌─[RESULT]─
│ Typechecking successful!
└─
```

```catala-test-inline
$ catala test-scope A
┌─[WARNING]─
│
│  Unused varible: a does not contribute to computing any of scope C outputs.
│  Did you forget something?
│
├─➤ tests/scope/good/sub_sub_scope.catala_en:14.3-14.4:
│    │
│ 14 │   a scope A
│    │   ‾
└─ Article
┌─[WARNING]─
│
│  Unused varible: b does not contribute to computing any of scope C outputs.
│  Did you forget something?
│
├─➤ tests/scope/good/sub_sub_scope.catala_en:15.3-15.4:
│    │
│ 15 │   b scope B
│    │   ‾
└─ Article
┌─[RESULT]─
│ u = true
│ x = 0
└─
```

```catala-test-inline
$ catala test-scope B
┌─[WARNING]─
│
│  Unused varible: a does not contribute to computing any of scope C outputs.
│  Did you forget something?
│
├─➤ tests/scope/good/sub_sub_scope.catala_en:14.3-14.4:
│    │
│ 14 │   a scope A
│    │   ‾
└─ Article
┌─[WARNING]─
│
│  Unused varible: b does not contribute to computing any of scope C outputs.
│  Did you forget something?
│
├─➤ tests/scope/good/sub_sub_scope.catala_en:15.3-15.4:
│    │
│ 15 │   b scope B
│    │   ‾
└─ Article
┌─[RESULT]─
│ y = 1
└─
```

```catala-test-inline
$ catala test-scope C
┌─[WARNING]─
│
│  Unused varible: a does not contribute to computing any of scope C outputs.
│  Did you forget something?
│
├─➤ tests/scope/good/sub_sub_scope.catala_en:14.3-14.4:
│    │
│ 14 │   a scope A
│    │   ‾
└─ Article
┌─[WARNING]─
│
│  Unused varible: b does not contribute to computing any of scope C outputs.
│  Did you forget something?
│
├─➤ tests/scope/good/sub_sub_scope.catala_en:15.3-15.4:
│    │
│ 15 │   b scope B
│    │   ‾
└─ Article
┌─[RESULT]─
│ z = 2
└─
```
