tests/scope/bad/scope.catala_en
## Article

```catala
declaration scope A:
  output a content integer
  output b content integer
  internal c content boolean

scope A:
  definition c equals false
  definition a under condition c consequence equals 42
  definition a under condition not c consequence equals 0
  definition b under condition not c consequence equals 1337
  definition b under condition not c consequence equals 0
```

```catala-test-cli
$ catala test-scope A
┌─[WARNING]─
│
│  Multiple conflicting definitions:
│  these have the same conditions and will always trigger a conflict at runtime.
│
├─➤ tests/scope/bad/scope.catala_en:13.32-13.37:
│    │
│ 13 │   definition b under condition not c consequence equals 1337
│    │                                ‾‾‾‾‾
├─ Article
│
├─➤ tests/scope/bad/scope.catala_en:14.32-14.37:
│    │
│ 14 │   definition b under condition not c consequence equals 0
│    │                                ‾‾‾‾‾
└─ Article
┌─[ERROR]─
│
│  During evaluation: conflict between multiple valid consequences for
│  assigning the same variable.
│
├─➤ tests/scope/bad/scope.catala_en:13.57-13.61:
│    │
│ 13 │   definition b under condition not c consequence equals 1337
│    │                                                         ‾‾‾‾
├─ Article
│
├─➤ tests/scope/bad/scope.catala_en:14.57-14.58:
│    │
│ 14 │   definition b under condition not c consequence equals 0
│    │                                                         ‾
└─ Article
#return code 123#
```
